# MRI_Degad

./: README.md  pyproject.toml
.github/workflows/: lint_and_test.yml
docs/: conf.py  index.md
docs/contributing/: contributing.md
docs/getting_started/: installation.md
docs/images/: dag.dot
docs/outputs/: output_files.md
docs/usage/: app_cli.md  cli.md  snakemake_cli.md
docs/workflow/: workflow.md
mri_degad/: pipeline_description.json  run.py  tasks.py
mri_degad/config/: snakebids.yml
mri_degad/workflow/: Snakefile
mri_degad/workflow/rules/: analysis.smk  cnn.smk  postprocessing.smk  preprocessing.smk  qc.smk
mri_degad/workflow/scripts/: analysis.py  calculate_metrics.py  cnn_apply.py  cnn_apply_2.py  config_inference.json  create_figures.py  denoise_img.py  extract_contrast_mask.py  fuse_img.py  model_apply.py  n4_bias_corr.py  normalize.py  original_model_apply.py  qc.py  registration.py  resample_img.py
mri_degad/workflow/scripts/model_helpers/: cbam.py  config_inference.json  data.py  losses.py  model.py  wat.py  wat_stacked_unets.py
mri_degad/workflow/scripts/model_helpers/src/: .gitignore
mri_degad/workflow/scripts/model_helpers/src/data/: dataloader.py  dataset.py  out_of_distribution_dataset.py
mri_degad/workflow/scripts/model_helpers/src/models/: stacked_unets.py  unet_vanilla.py  wat_stacked_unets.py  wat_unet.py
mri_degad/workflow/scripts/model_helpers/src/training/: trainer_lightning.py
mri_degad/workflow/scripts/model_helpers/src/utils/: adaptive_losses.py  losses.py  metrics.py
